--- a/src/Components/Reviews/ReviewItem.css
+++ b/src/Components/Reviews/ReviewItem.css
@@ -1,3 +1,19 @@
+.review-container {
+    padding: 5px, 0;
+    justify-self: flex-start;
+}
+
+.nothing-container {
+    padding: 5px, 0;
+    justify-self: flex-start;
+}
+
+.nothing-container h4 {
+    font-size: 26px;
+    font-weight: 600;
+    margin: 2px;
+}
+
 .review-row {
     width: 1500px;
     cursor: pointer;
@@ -28,8 +44,9 @@
 }
 
 .title {
-    font-size: 40px;
-    font-weight: bold;
+    font-size: 36px;
+    font-weight: 800;
+    width: 650px;
     color: blue;
     letter-spacing: 1.3px;
 }
